# kedro-mlflow-bentoml

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  README.md  pyproject.toml
conf/base/: catalog.yml  logging.yml
conf/local/: mlflow.yml
docs/source/: conf.py  index.rst
mlruns/0/: meta.yaml
notebooks/: bento.ipynb  evaluate_predictions.ipynb  grab_pipeline_output.ipynb
scripts/: bento_build  bento_run.sh  train_models.sh
src/: setup.py
src/bento/: bentofile.yaml  service.py
src/kedro_mlflow_bentoml/: __init__.py  __main__.py  nodes.py  pipeline.py  settings.py
src/tests/: test_run.py
