[tool.poetry]
name = "nlp-project"
version = "0.1.0"
description = ""
authors = ["hugocool <hugo.evers@gmail.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
kedro = "^0.18.4"
kedro-mlflow = "^0.11.5"
transformers = "^4.25.1"
pandas = "^1.5.2"
plotly = "^5.11.0"
loguru = "^0.6.0"
bentoml = "^1.0.12"
pydantic = "^1.10.2"
numpy = "^1.24.1"
sklearn = "^0.0-post.1"
deepchecks = "^0.10.0"
datasets = "^2.8.0"
sentencepiece = "^0.1.97"
torch = "^1.13.1"
fuzzywuzzy = "^0.18.0"
regex = "^2022.10.31"
rapidfuzz = "^2.13.7"
tensorflow = "^2.11.0"
simpletransformers = "^0.63.9"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
pytest = "^7.0.1"
ipykernel = "^6.9.1"
pylint = "^2.12.2"
black = {version = "^22.1.0", allow-prereleases = true}
flake8 = "^5.0.4"
ipython = "^7.0.0"
isort = "^5.10.1"
safety = "^1.10.3"
friendly = "^0.5.19"
pytest-cov = "^3.0.0"
kedro-viz = "^5.1.1"
mkdocs = "^1.3.1"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
mkdocs-material = "^8.3.9"
mkdocs-macros-plugin = "^0.7.0"
mkdocs-autorefs = "^0.4.1"
mkdocs-drawio-exporter = "^0.8.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.kedro]
package_name = "nlp_project"
project_name = "NLP Project"
project_version = "0.18.4"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/NLP-project -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]
