[tool.poetry]
name = "kedro-mlflow-bentoml"
version = "0.1.0"
description = ""
authors = ["hugocool <hugo.evers@gmail.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "~3.9.10"
kedro-mlflow = "^0.11.5"
pandas = "^1.5.2"
loguru = "^0.6.0"
bentoml = "^1.0.12"
numpy = "^1.24.1"
scikit-learn = "^1.2.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
ipykernel = "^6.9.1"
pylint = "^2.12.2"
black = {version = "^22.1.0", allow-prereleases = true}
flake8 = "^5.0.4"
ipython = "^7.0.0"
isort = "^5.10.1"
kedro-viz = "^5.1.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.kedro]
package_name = "kedro_mlflow_bentoml"
project_name = "kedro-mlflow-bentoml"
project_version = "0.18.4"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/kedro_mlflow_bentoml -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]


